--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </div>
+        <div class="contact-footer">
+            <ul>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+            </ul>
+        </div>
+        <div class="footer"><a href="#">All rigth reserved to  @VHSDIGITALSOLUTION</a></div>
         <div class="banner"></div> 
     </nav>
     
